@@ -34,23 +34,23 @@ import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.container.ContainerRequestContext;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
+import jakarta.inject.Inject;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DefaultValue;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.WebApplicationException;
+import jakarta.ws.rs.container.ContainerRequestContext;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -59,6 +59,8 @@ import org.apache.logging.log4j.Logger;
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 
+import de.unigoettingen.sub.commons.cache.CacheUtils;
+import de.unigoettingen.sub.commons.cache.ContentServerCacheManager;
 import de.unigoettingen.sub.commons.contentlib.exceptions.ContentLibException;
 import de.unigoettingen.sub.commons.contentlib.exceptions.ContentNotFoundException;
 import de.unigoettingen.sub.commons.contentlib.exceptions.IllegalRequestException;
@@ -66,7 +68,6 @@ import de.unigoettingen.sub.commons.contentlib.imagelib.ImageFileFormat;
 import de.unigoettingen.sub.commons.contentlib.servlet.rest.CORSBinding;
 import de.unigoettingen.sub.commons.contentlib.servlet.rest.ContentServerImageInfoBinding;
 import de.unigoettingen.sub.commons.contentlib.servlet.rest.ImageResource;
-import de.unigoettingen.sub.commons.util.CacheUtils;
 import de.unigoettingen.sub.commons.util.PathConverter;
 import io.goobi.viewer.api.rest.AbstractApiUrlManager;
 import io.goobi.viewer.api.rest.v1.ApiUrls;
@@ -84,7 +85,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
  * @author florian
  *
  */
-@javax.ws.rs.Path(USERS_USER_AVATAR_IMAGE)
+@jakarta.ws.rs.Path(USERS_USER_AVATAR_IMAGE)
 @CORSBinding
 public class UserAvatarResource extends ImageResource {
 
@@ -97,9 +98,12 @@ public class UserAvatarResource extends ImageResource {
     private static final String FILENAME_TEMPLATE = "user_{id}";
 
     public UserAvatarResource(
-            @Context ContainerRequestContext context, @Context HttpServletRequest request, @Context HttpServletResponse response,
-            @Parameter(description = "User id") @PathParam("userId") Long userId) throws WebApplicationException, ViewerConfigurationException {
-        super(context, request, response, "", getMediaFileUrl(userId).toString());
+            @Context ContainerRequestContext context, 
+            @Context HttpServletRequest request, 
+            @Context HttpServletResponse response,
+            @Parameter(description = "User id") @PathParam("userId") Long userId, 
+            @Context ContentServerCacheManager cacheManager) throws WebApplicationException, ViewerConfigurationException {
+        super(context, request, response, "", getMediaFileUrl(userId).toString(), cacheManager);
         AbstractApiUrlManager urls = DataManager.getInstance().getRestApiManager().getDataApiManager().orElse(null);
         if (urls == null) {
             throw new ViewerConfigurationException("Could not initioalize API manager, check configuration.");
@@ -110,7 +114,7 @@ public class UserAvatarResource extends ImageResource {
         String imageRequestPath = requestUrl.replace(baseImageUrl, "");
         this.resourceURI = URI.create(baseImageUrl);
 
-        List<String> parts = Arrays.stream(imageRequestPath.split("/")).filter(StringUtils::isNotBlank).collect(Collectors.toList());
+        List<String> parts = Arrays.stream(imageRequestPath.split("/")).filter(StringUtils::isNotBlank).toList();
         if (parts.size() == 4) {
             //image request
             request.setAttribute("iiif-info", false);
@@ -131,9 +135,15 @@ public class UserAvatarResource extends ImageResource {
      */
     public static URI getMediaFileUrl(Long userId) throws WebApplicationException {
         try {
+            //            Optional<URI> ret = getUserAvatarFile(userId).map(PathConverter::toURI);
+            //            if (ret.isPresent()) {
+            //                return ret.get();
+            //            }
+            logger.debug("No avatar file found for user {}", userId);
             return getUserAvatarFile(userId).map(PathConverter::toURI)
                     .orElseThrow(() -> new ContentNotFoundException("No avatar file found for user " + userId));
-        } catch (ContentLibException | IOException e) {
+            //            return URI.create("");
+        } catch (IOException | ContentNotFoundException e) {
             throw new WebApplicationException(e);
         }
     }
@@ -206,7 +216,7 @@ public class UserAvatarResource extends ImageResource {
             if (Files.exists(mediaFile) && Files.size(mediaFile) > 0) {
                 logger.debug("Successfully downloaded file {}", mediaFile);
                 //upload successful. TODO: check file integrity?
-                removeFromImageCache(mediaFile);
+                removeFromImageCache(mediaFile, this.cacheManager);
                 return Response.status(Status.OK).build();
             }
             String message = Messages.translate("admin__media_upload_error", servletRequest.getLocale(), mediaFile.getFileName().toString());
@@ -230,12 +240,11 @@ public class UserAvatarResource extends ImageResource {
         ImageFileFormat fileFormat = ImageFileFormat.getImageFileFormatFromFileExtension(uploadFilename);
         if (fileFormat != null) {
             String filename = FILENAME_TEMPLATE.replace("{id}", userId.toString()) + "." + fileFormat.getFileExtension();
-            return getUserAvatarFolder().resolve(filename);            
-        } else {
-            String filename = FILENAME_TEMPLATE.replace("{id}", userId.toString()) + "." + FilenameUtils.getExtension(uploadFilename);
-            return getUserAvatarFolder().resolve(filename);      
+            return getUserAvatarFolder().resolve(filename);
         }
 
+        String filename = FILENAME_TEMPLATE.replace("{id}", userId.toString()) + "." + FilenameUtils.getExtension(uploadFilename);
+        return getUserAvatarFolder().resolve(filename);
     }
 
     /**
@@ -259,9 +268,9 @@ public class UserAvatarResource extends ImageResource {
         return Optional.of(user);
     }
 
-    public static void removeFromImageCache(Path file) {
+    public static void removeFromImageCache(Path file, ContentServerCacheManager cacheManager) {
         String identifier = file.getParent().getFileName().toString() + "_" + file.getFileName().toString().replace(".", "-");
-        CacheUtils.deleteFromCache(identifier, true, true);
+        new CacheUtils(cacheManager).deleteFromCache(identifier, true, true);
     }
 
 }
