@@ -28,6 +28,7 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -56,6 +57,7 @@ import org.jdom2.JDOMException;
 import de.intranda.metadata.multilanguage.IMetadataValue;
 import de.intranda.metadata.multilanguage.MultiLanguageMetadataValue;
 import io.goobi.viewer.controller.DataManager;
+import io.goobi.viewer.controller.DateTools;
 import io.goobi.viewer.controller.NetTools;
 import io.goobi.viewer.controller.StringTools;
 import io.goobi.viewer.controller.XmlTools;
@@ -336,6 +338,7 @@ public final class SolrTools {
      * @param fieldName a {@link java.lang.String} object.
      * @return a {@link java.util.List} object.
      * @should return all values for the given field
+     * @should parse dates correctly
      */
     public static List<String> getMetadataValues(SolrDocument doc, String fieldName) {
         if (doc == null) {
@@ -349,10 +352,11 @@ public final class SolrTools {
 
         List<String> ret = new ArrayList<>(values.size());
         for (Object value : values) {
-            if (value instanceof String s) {
-                ret.add(s);
-            } else {
-                ret.add(String.valueOf(value));
+            switch (value) {
+                case String s -> ret.add(s);
+                case Date date -> ret.add(DateTools.FORMATTERISO8601FULL
+                        .format(DateTools.convertDateToLocalDateTimeViaInstant(date)));
+                default -> ret.add(String.valueOf(value));
             }
         }
 
@@ -496,7 +500,7 @@ public final class SolrTools {
                     .keySet()
                     .stream()
                     .filter(field -> field.equals(key) || field.startsWith(key + SolrConstants.MIDFIX_LANG))
-                    .collect(Collectors.toList());
+                    .toList();
             for (String languageField : fieldNames) {
                 String locale = null;
                 if (languageField.matches(key + "_LANG_\\w{2,3}")) {
@@ -789,7 +793,9 @@ public final class SolrTools {
             throw new IllegalArgumentException("filterQuery may not be null");
         }
         String facettifiedField = useFacetField ? SearchHelper.facetifyField(field) : field;
+        logger.error(facettifiedField);
         String fq = SearchHelper.buildFinalQuery(filterQuery, false, SearchAggregationType.NO_AGGREGATION);
+        logger.error(fq);
         QueryResponse qr =
                 DataManager.getInstance()
                         .getSearchIndex()
@@ -825,7 +831,7 @@ public final class SolrTools {
             return Collections.emptyList();
         }
 
-        return getAvailableValuesForField(subthemeDiscriminatorField, SolrConstants.PI + ":*", false);
+        return getAvailableValuesForField(subthemeDiscriminatorField, SolrConstants.PI + ":*", true);
     }
 
     /**
